[fix] config path

--- a/user_info.conf
+++ b/user_info.conf
@@ -1,5 +1,5 @@
 [dc]
-id = 'hoho'
+id = "hoho"
 pw = '123123'
 url = https://www.dcinside.com/
 gall = https://gall.dcinside.com/board/write/?id=teamfortress2
