[update] dc_auto_write

--- a/user_info.conf
+++ b/user_info.conf
@@ -1,7 +1,7 @@
 [dc]
-id = 'hoho'
-pw = '123123'
+id = hoho
+pw = 123123
 url = https://www.dcinside.com/
 gall = https://gall.dcinside.com/board/write/?id=teamfortress2
-title = 'ㅎㅇ'
-content ="<p>ㅂㅇ</p>"
+title = ㅎㅇ
+content = <p>ㅂㅇ</p>
